Upgraded to Java 25 & Spring Boot 4.0.0-SNAPSHOT